--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-family: "Open Sans", sans-serif; }
 
-header {
+header, section {
   width: 100%; }
 
 .container {
@@ -14,6 +14,9 @@ header {
   margin: 0 auto;
   position: relative;
   height: 100%; }
+
+.yellow {
+  color: #ecd407; }
 
 header {
   position: absolute;
@@ -30,10 +33,38 @@ header {
     margin-left: 30px; }
     header #main-logo h1 {
       display: inline-block;
-      margin: 0; }
+      margin: 0;
+      line-height: 43px; }
     header #main-logo .fa {
       color: #ecd407;
       line-height: 43px;
       font-size: 2em;
       float: left;
       margin-right: 10px; }
+  header .header-contact {
+    display: inline-block;
+    float: right;
+    width: 300px; }
+    header .header-contact .fa {
+      font-size: 2em;
+      float: left;
+      margin-right: 10px;
+      line-height: 45px; }
+    header .header-contact span {
+      display: block; }
+      header .header-contact span.call {
+        font-size: 0.7 em; }
+      header .header-contact span.phone {
+        font-size: 1.2em; }
+
+#form-section {
+  background-image: url(../background.png);
+  background-position: top;
+  background-size: cover;
+  height: 100vh;
+  color: #fff; }
+  #form-section .form-section-right {
+    position: absolute;
+    right: 8%;
+    width: 370px;
+    top: 25%; }
