--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 * {
 	box-sizing: border-box;
@@ -10,7 +11,7 @@ body {
 	font-family: $main-font;
 }
 
-header {
+header, section {
 	width: 100%;
 }
 
@@ -19,5 +20,9 @@ header {
 	margin: 0 auto;
 	position: relative;
 	height: 100%;
+}
+
+.yellow {
+	color: $yellow-color;
 }
 
