--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -16,14 +16,36 @@ header {
 		h1 {
 			display: inline-block;
 			margin: 0;
+			line-height: 43px;
 		}
 		
 		.fa {
 			color: $yellow-color;
 			line-height: 43px;
-			font-size: 2em;
-			float: left;
-			margin-right: 10px;
+			@include fa-header;
 		}
 	}
-}
+	
+	.header-contact {
+		display: inline-block;
+		float: right;
+		width: 300px;
+		
+		.fa {
+			@include fa-header;
+			line-height: 45px;
+		}
+		
+		span {
+			display: block; //globalnie dla calego znacznika span
+			
+			&.call { //tylko dla spana o klasie call
+				font-size: 0.7 em;
+			}
+			
+			&.phone { //tylko dla spana o klasie phone
+				font-size: 1.2em;
+			}
+		}
+	}
+} 
