--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,24 @@ header {
         #form-section #main-form fieldset input[type="submit"]:hover {
           background-color: #fff;
           cursor: pointer; }
+
+footer {
+  background-color: #292929;
+  padding: 50px 0;
+  color: #fff; }
+  footer .phone-footer {
+    text-align: center;
+    margin-bottom: 30px; }
+    footer .phone-footer .fa {
+      background-color: #f4b939;
+      color: #000;
+      height: 50px;
+      width: 50px;
+      font-size: 25px;
+      text-align: center;
+      line-height: 50px;
+      display: block;
+      margin: 0 auto 10px; }
+  footer p {
+    text-align: center;
+    font-size: 0.8em; }
